<!-- This file is part of the INCOME platform. The INCOME platform is free 
	software: you can redistribute it and/or modify it under the terms of the 
	GNU Lesser General Public License as published by the Free Software Foundation, 
	either version 3 of the License, or (at your option) any later version. The 
	INCOME platform is distributed in the hope that it will be useful, but WITHOUT 
	ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
	FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
	details. You should have received a copy of the GNU Lesser General Public 
	License along with the INCOME platform. If not, see <http://www.gnu.org/licenses/>. 
	Initial developer(s): Pierrick MARIE Contributor(s): -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
			     http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>qocim</groupId>
		<artifactId>qocim-framework</artifactId>
		<version>0.14.2-SNAPSHOT</version>
	</parent>

	<groupId>qocim-tools</groupId>
	<artifactId>qocim-tools</artifactId>
	<version>0.14.2-SNAPSHOT</version>
	<name>QoCIM tools</name>
	<description>The QoCIM model: Quality of Context Information Model</description>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>LGPL</name>
			<url>http://www.gnu.org/licenses/lgpl</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<deploy.dir>/tmp</deploy.dir>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- osgi felix bundlelisation -->
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.3.7</version>
			</dependency>
			<!-- surefire -->
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
			</dependency>
			<!-- junit -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.10</version>
				<scope>test</scope>
			</dependency>
			<!-- javadoc -->
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
			</dependency>
			<!-- source packaging configuration -->
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
			</dependency>
			<!-- site -->
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<!-- osgi felix bundlelisation -->
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>2.3.7</version>
				</plugin>
				<!-- java compiler -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
				</plugin>
				<!-- jar packaging -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<!-- source packaging configuration -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
				</plugin>
				<!-- javadoc packaging in jar configuration -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
				</plugin>
				<!-- surefire -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.15</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>

			<!-- java compiler configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- source packaging configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- javadoc packaging in jar configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<docfilessubdirs>true</docfilessubdirs>
							<excludedocfilessubdir>.svn</excludedocfilessubdir>
							<detectOfflineLinks>false</detectOfflineLinks>
							<detectJavaApiLink>false</detectJavaApiLink>
							<overview>${basedir}/src/main/javadoc/overview.html</overview>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- surefire configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>
							**/Test*.java
						</include>
					</includes>
				</configuration>
			</plugin>

			<!-- jar package generation configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<index>true</index>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<mode>alpha</mode>
							<url>${project.url}</url>
							<key>value</key>
							<Implementation-Vendor>Institut Mines Télécom, Télécom SudParis</Implementation-Vendor>
							<Implementation-Title>${project.name}</Implementation-Title>
							<Implementation-Version>0.14.2-SNAPSHOT</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<modules>
		<module>qocim-functions</module>
<!--		<module>qocim-routing-filter</module>-->
		<module>qocim-criteria</module>
<!--		<module>qocim-capsule</module>-->
	</modules>

</project>
